parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> procedure_list
Rule 2     procedure_list -> procedure
Rule 3     procedure_list -> procedure_list procedure
Rule 4     param_list -> type ID
Rule 5     param_list -> param_list COMMA type ID
Rule 6     procedure -> PROCEDURE ID LPAREN RPAREN body
Rule 7     procedure -> PROCEDURE ID LPAREN param_list RPAREN body
Rule 8     body -> statement
Rule 9     body -> body statement
Rule 10    body -> empty
Rule 11    empty -> <empty>
Rule 12    type -> INT
Rule 13    type -> STACK
Rule 14    type -> CHANNEL
Rule 15    expr -> expr PLUS expr
Rule 16    expr -> expr MINUS expr
Rule 17    expr -> expr PROD expr
Rule 18    expr -> expr DIV expr
Rule 19    expr -> expr EXP expr
Rule 20    expr -> expr MOD expr
Rule 21    expr -> LPAREN expr RPAREN
Rule 22    expr -> NUMBER
Rule 23    expr -> ID
Rule 24    statement -> type ID
Rule 25    statement -> ID PLUSEQUALS expr
Rule 26    statement -> ID MINUSEQUALS expr
Rule 27    statement -> ID PRODEQUALS expr
Rule 28    statement -> ID DIVEQUALS expr
Rule 29    statement -> ID EXPEQUALS expr
Rule 30    statement -> ID MODEQUALS expr
Rule 31    statement -> ID SWAP expr
Rule 32    value -> NUMBER
Rule 33    value -> NIL
Rule 34    value -> EMPT
Rule 35    value -> ID
Rule 36    statement -> LOCAL type ID EQUALS value
Rule 37    statement -> DELOCAL type ID EQUALS value
Rule 38    statement -> DELOCAL type ID
Rule 39    arg_list -> ID
Rule 40    arg_list -> arg_list COMMA ID
Rule 41    statement -> CALL ID LPAREN RPAREN
Rule 42    statement -> CALL ID LPAREN arg_list RPAREN
Rule 43    statement -> ID LPAREN RPAREN
Rule 44    statement -> ID LPAREN arg_list RPAREN
Rule 45    statement -> UNCALL ID LPAREN RPAREN
Rule 46    statement -> UNCALL ID LPAREN arg_list RPAREN
Rule 47    condition -> expr EQUALS expr
Rule 48    statement -> FROM condition LOOP body UNTIL condition
Rule 49    statement -> IF condition THEN body FI condition
Rule 50    statement -> IF condition THEN body ELSE body FI condition
Rule 51    par_branch_list -> body
Rule 52    par_branch_list -> par_branch_list AND body
Rule 53    statement -> PAR par_branch_list RAP

Terminals, with rules where they appear

AND                  : 52
CALL                 : 41 42
CHANNEL              : 14
COMMA                : 5 40
DELOCAL              : 37 38
DIV                  : 18
DIVEQUALS            : 28
ELSE                 : 50
EMPT                 : 34
EQUALS               : 36 37 47
EXP                  : 19
EXPEQUALS            : 29
FI                   : 49 50
FROM                 : 48
ID                   : 4 5 6 7 23 24 25 26 27 28 29 30 31 35 36 37 38 39 40 41 42 43 44 45 46
IF                   : 49 50
INT                  : 12
LOCAL                : 36
LOOP                 : 48
LPAREN               : 6 7 21 41 42 43 44 45 46
MINUS                : 16
MINUSEQUALS          : 26
MOD                  : 20
MODEQUALS            : 30
NIL                  : 33
NUMBER               : 22 32
PAR                  : 53
PLUS                 : 15
PLUSEQUALS           : 25
PROCEDURE            : 6 7
PROD                 : 17
PRODEQUALS           : 27
RAP                  : 53
RPAREN               : 6 7 21 41 42 43 44 45 46
STACK                : 13
SWAP                 : 31
THEN                 : 49 50
UNCALL               : 45 46
UNTIL                : 48
error                : 

Nonterminals, with rules where they appear

arg_list             : 40 42 44 46
body                 : 6 7 9 48 49 50 50 51 52
condition            : 48 48 49 49 50 50
empty                : 10
expr                 : 15 15 16 16 17 17 18 18 19 19 20 20 21 25 26 27 28 29 30 31 47 47
par_branch_list      : 52 53
param_list           : 5 7
procedure            : 2 3
procedure_list       : 1 3
program              : 0
statement            : 8 9
type                 : 4 5 24 36 37 38
value                : 36 37

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . procedure_list
    (2) procedure_list -> . procedure
    (3) procedure_list -> . procedure_list procedure
    (6) procedure -> . PROCEDURE ID LPAREN RPAREN body
    (7) procedure -> . PROCEDURE ID LPAREN param_list RPAREN body

    PROCEDURE       shift and go to state 4

    program                        shift and go to state 1
    procedure_list                 shift and go to state 2
    procedure                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> procedure_list .
    (3) procedure_list -> procedure_list . procedure
    (6) procedure -> . PROCEDURE ID LPAREN RPAREN body
    (7) procedure -> . PROCEDURE ID LPAREN param_list RPAREN body

    $end            reduce using rule 1 (program -> procedure_list .)
    PROCEDURE       shift and go to state 4

    procedure                      shift and go to state 5

state 3

    (2) procedure_list -> procedure .

    PROCEDURE       reduce using rule 2 (procedure_list -> procedure .)
    $end            reduce using rule 2 (procedure_list -> procedure .)


state 4

    (6) procedure -> PROCEDURE . ID LPAREN RPAREN body
    (7) procedure -> PROCEDURE . ID LPAREN param_list RPAREN body

    ID              shift and go to state 6


state 5

    (3) procedure_list -> procedure_list procedure .

    PROCEDURE       reduce using rule 3 (procedure_list -> procedure_list procedure .)
    $end            reduce using rule 3 (procedure_list -> procedure_list procedure .)


state 6

    (6) procedure -> PROCEDURE ID . LPAREN RPAREN body
    (7) procedure -> PROCEDURE ID . LPAREN param_list RPAREN body

    LPAREN          shift and go to state 7


state 7

    (6) procedure -> PROCEDURE ID LPAREN . RPAREN body
    (7) procedure -> PROCEDURE ID LPAREN . param_list RPAREN body
    (4) param_list -> . type ID
    (5) param_list -> . param_list COMMA type ID
    (12) type -> . INT
    (13) type -> . STACK
    (14) type -> . CHANNEL

    RPAREN          shift and go to state 8
    INT             shift and go to state 11
    STACK           shift and go to state 12
    CHANNEL         shift and go to state 13

    param_list                     shift and go to state 9
    type                           shift and go to state 10

state 8

    (6) procedure -> PROCEDURE ID LPAREN RPAREN . body
    (8) body -> . statement
    (9) body -> . body statement
    (10) body -> . empty
    (24) statement -> . type ID
    (25) statement -> . ID PLUSEQUALS expr
    (26) statement -> . ID MINUSEQUALS expr
    (27) statement -> . ID PRODEQUALS expr
    (28) statement -> . ID DIVEQUALS expr
    (29) statement -> . ID EXPEQUALS expr
    (30) statement -> . ID MODEQUALS expr
    (31) statement -> . ID SWAP expr
    (36) statement -> . LOCAL type ID EQUALS value
    (37) statement -> . DELOCAL type ID EQUALS value
    (38) statement -> . DELOCAL type ID
    (41) statement -> . CALL ID LPAREN RPAREN
    (42) statement -> . CALL ID LPAREN arg_list RPAREN
    (43) statement -> . ID LPAREN RPAREN
    (44) statement -> . ID LPAREN arg_list RPAREN
    (45) statement -> . UNCALL ID LPAREN RPAREN
    (46) statement -> . UNCALL ID LPAREN arg_list RPAREN
    (48) statement -> . FROM condition LOOP body UNTIL condition
    (49) statement -> . IF condition THEN body FI condition
    (50) statement -> . IF condition THEN body ELSE body FI condition
    (53) statement -> . PAR par_branch_list RAP
    (11) empty -> .
    (12) type -> . INT
    (13) type -> . STACK
    (14) type -> . CHANNEL

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LOCAL resolved as shift
  ! shift/reduce conflict for DELOCAL resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for UNCALL resolved as shift
  ! shift/reduce conflict for FROM resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for PAR resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STACK resolved as shift
  ! shift/reduce conflict for CHANNEL resolved as shift
    ID              shift and go to state 14
    LOCAL           shift and go to state 19
    DELOCAL         shift and go to state 20
    CALL            shift and go to state 21
    UNCALL          shift and go to state 22
    FROM            shift and go to state 23
    IF              shift and go to state 24
    PAR             shift and go to state 25
    PROCEDURE       reduce using rule 11 (empty -> .)
    $end            reduce using rule 11 (empty -> .)
    INT             shift and go to state 11
    STACK           shift and go to state 12
    CHANNEL         shift and go to state 13

  ! ID              [ reduce using rule 11 (empty -> .) ]
  ! LOCAL           [ reduce using rule 11 (empty -> .) ]
  ! DELOCAL         [ reduce using rule 11 (empty -> .) ]
  ! CALL            [ reduce using rule 11 (empty -> .) ]
  ! UNCALL          [ reduce using rule 11 (empty -> .) ]
  ! FROM            [ reduce using rule 11 (empty -> .) ]
  ! IF              [ reduce using rule 11 (empty -> .) ]
  ! PAR             [ reduce using rule 11 (empty -> .) ]
  ! INT             [ reduce using rule 11 (empty -> .) ]
  ! STACK           [ reduce using rule 11 (empty -> .) ]
  ! CHANNEL         [ reduce using rule 11 (empty -> .) ]

    body                           shift and go to state 15
    statement                      shift and go to state 16
    empty                          shift and go to state 17
    type                           shift and go to state 18

state 9

    (7) procedure -> PROCEDURE ID LPAREN param_list . RPAREN body
    (5) param_list -> param_list . COMMA type ID

    RPAREN          shift and go to state 26
    COMMA           shift and go to state 27


state 10

    (4) param_list -> type . ID

    ID              shift and go to state 28


state 11

    (12) type -> INT .

    ID              reduce using rule 12 (type -> INT .)


state 12

    (13) type -> STACK .

    ID              reduce using rule 13 (type -> STACK .)


state 13

    (14) type -> CHANNEL .

    ID              reduce using rule 14 (type -> CHANNEL .)


state 14

    (25) statement -> ID . PLUSEQUALS expr
    (26) statement -> ID . MINUSEQUALS expr
    (27) statement -> ID . PRODEQUALS expr
    (28) statement -> ID . DIVEQUALS expr
    (29) statement -> ID . EXPEQUALS expr
    (30) statement -> ID . MODEQUALS expr
    (31) statement -> ID . SWAP expr
    (43) statement -> ID . LPAREN RPAREN
    (44) statement -> ID . LPAREN arg_list RPAREN

    PLUSEQUALS      shift and go to state 29
    MINUSEQUALS     shift and go to state 30
    PRODEQUALS      shift and go to state 31
    DIVEQUALS       shift and go to state 32
    EXPEQUALS       shift and go to state 33
    MODEQUALS       shift and go to state 34
    SWAP            shift and go to state 35
    LPAREN          shift and go to state 36


state 15

    (6) procedure -> PROCEDURE ID LPAREN RPAREN body .
    (9) body -> body . statement
    (24) statement -> . type ID
    (25) statement -> . ID PLUSEQUALS expr
    (26) statement -> . ID MINUSEQUALS expr
    (27) statement -> . ID PRODEQUALS expr
    (28) statement -> . ID DIVEQUALS expr
    (29) statement -> . ID EXPEQUALS expr
    (30) statement -> . ID MODEQUALS expr
    (31) statement -> . ID SWAP expr
    (36) statement -> . LOCAL type ID EQUALS value
    (37) statement -> . DELOCAL type ID EQUALS value
    (38) statement -> . DELOCAL type ID
    (41) statement -> . CALL ID LPAREN RPAREN
    (42) statement -> . CALL ID LPAREN arg_list RPAREN
    (43) statement -> . ID LPAREN RPAREN
    (44) statement -> . ID LPAREN arg_list RPAREN
    (45) statement -> . UNCALL ID LPAREN RPAREN
    (46) statement -> . UNCALL ID LPAREN arg_list RPAREN
    (48) statement -> . FROM condition LOOP body UNTIL condition
    (49) statement -> . IF condition THEN body FI condition
    (50) statement -> . IF condition THEN body ELSE body FI condition
    (53) statement -> . PAR par_branch_list RAP
    (12) type -> . INT
    (13) type -> . STACK
    (14) type -> . CHANNEL

    PROCEDURE       reduce using rule 6 (procedure -> PROCEDURE ID LPAREN RPAREN body .)
    $end            reduce using rule 6 (procedure -> PROCEDURE ID LPAREN RPAREN body .)
    ID              shift and go to state 14
    LOCAL           shift and go to state 19
    DELOCAL         shift and go to state 20
    CALL            shift and go to state 21
    UNCALL          shift and go to state 22
    FROM            shift and go to state 23
    IF              shift and go to state 24
    PAR             shift and go to state 25
    INT             shift and go to state 11
    STACK           shift and go to state 12
    CHANNEL         shift and go to state 13

    statement                      shift and go to state 37
    type                           shift and go to state 18

state 16

    (8) body -> statement .

    ID              reduce using rule 8 (body -> statement .)
    LOCAL           reduce using rule 8 (body -> statement .)
    DELOCAL         reduce using rule 8 (body -> statement .)
    CALL            reduce using rule 8 (body -> statement .)
    UNCALL          reduce using rule 8 (body -> statement .)
    FROM            reduce using rule 8 (body -> statement .)
    IF              reduce using rule 8 (body -> statement .)
    PAR             reduce using rule 8 (body -> statement .)
    INT             reduce using rule 8 (body -> statement .)
    STACK           reduce using rule 8 (body -> statement .)
    CHANNEL         reduce using rule 8 (body -> statement .)
    PROCEDURE       reduce using rule 8 (body -> statement .)
    $end            reduce using rule 8 (body -> statement .)
    RAP             reduce using rule 8 (body -> statement .)
    AND             reduce using rule 8 (body -> statement .)
    UNTIL           reduce using rule 8 (body -> statement .)
    FI              reduce using rule 8 (body -> statement .)
    ELSE            reduce using rule 8 (body -> statement .)


state 17

    (10) body -> empty .

    ID              reduce using rule 10 (body -> empty .)
    LOCAL           reduce using rule 10 (body -> empty .)
    DELOCAL         reduce using rule 10 (body -> empty .)
    CALL            reduce using rule 10 (body -> empty .)
    UNCALL          reduce using rule 10 (body -> empty .)
    FROM            reduce using rule 10 (body -> empty .)
    IF              reduce using rule 10 (body -> empty .)
    PAR             reduce using rule 10 (body -> empty .)
    INT             reduce using rule 10 (body -> empty .)
    STACK           reduce using rule 10 (body -> empty .)
    CHANNEL         reduce using rule 10 (body -> empty .)
    PROCEDURE       reduce using rule 10 (body -> empty .)
    $end            reduce using rule 10 (body -> empty .)
    RAP             reduce using rule 10 (body -> empty .)
    AND             reduce using rule 10 (body -> empty .)
    UNTIL           reduce using rule 10 (body -> empty .)
    FI              reduce using rule 10 (body -> empty .)
    ELSE            reduce using rule 10 (body -> empty .)


state 18

    (24) statement -> type . ID

    ID              shift and go to state 38


state 19

    (36) statement -> LOCAL . type ID EQUALS value
    (12) type -> . INT
    (13) type -> . STACK
    (14) type -> . CHANNEL

    INT             shift and go to state 11
    STACK           shift and go to state 12
    CHANNEL         shift and go to state 13

    type                           shift and go to state 39

state 20

    (37) statement -> DELOCAL . type ID EQUALS value
    (38) statement -> DELOCAL . type ID
    (12) type -> . INT
    (13) type -> . STACK
    (14) type -> . CHANNEL

    INT             shift and go to state 11
    STACK           shift and go to state 12
    CHANNEL         shift and go to state 13

    type                           shift and go to state 40

state 21

    (41) statement -> CALL . ID LPAREN RPAREN
    (42) statement -> CALL . ID LPAREN arg_list RPAREN

    ID              shift and go to state 41


state 22

    (45) statement -> UNCALL . ID LPAREN RPAREN
    (46) statement -> UNCALL . ID LPAREN arg_list RPAREN

    ID              shift and go to state 42


state 23

    (48) statement -> FROM . condition LOOP body UNTIL condition
    (47) condition -> . expr EQUALS expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr PROD expr
    (18) expr -> . expr DIV expr
    (19) expr -> . expr EXP expr
    (20) expr -> . expr MOD expr
    (21) expr -> . LPAREN expr RPAREN
    (22) expr -> . NUMBER
    (23) expr -> . ID

    LPAREN          shift and go to state 45
    NUMBER          shift and go to state 46
    ID              shift and go to state 47

    condition                      shift and go to state 43
    expr                           shift and go to state 44

state 24

    (49) statement -> IF . condition THEN body FI condition
    (50) statement -> IF . condition THEN body ELSE body FI condition
    (47) condition -> . expr EQUALS expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr PROD expr
    (18) expr -> . expr DIV expr
    (19) expr -> . expr EXP expr
    (20) expr -> . expr MOD expr
    (21) expr -> . LPAREN expr RPAREN
    (22) expr -> . NUMBER
    (23) expr -> . ID

    LPAREN          shift and go to state 45
    NUMBER          shift and go to state 46
    ID              shift and go to state 47

    condition                      shift and go to state 48
    expr                           shift and go to state 44

state 25

    (53) statement -> PAR . par_branch_list RAP
    (51) par_branch_list -> . body
    (52) par_branch_list -> . par_branch_list AND body
    (8) body -> . statement
    (9) body -> . body statement
    (10) body -> . empty
    (24) statement -> . type ID
    (25) statement -> . ID PLUSEQUALS expr
    (26) statement -> . ID MINUSEQUALS expr
    (27) statement -> . ID PRODEQUALS expr
    (28) statement -> . ID DIVEQUALS expr
    (29) statement -> . ID EXPEQUALS expr
    (30) statement -> . ID MODEQUALS expr
    (31) statement -> . ID SWAP expr
    (36) statement -> . LOCAL type ID EQUALS value
    (37) statement -> . DELOCAL type ID EQUALS value
    (38) statement -> . DELOCAL type ID
    (41) statement -> . CALL ID LPAREN RPAREN
    (42) statement -> . CALL ID LPAREN arg_list RPAREN
    (43) statement -> . ID LPAREN RPAREN
    (44) statement -> . ID LPAREN arg_list RPAREN
    (45) statement -> . UNCALL ID LPAREN RPAREN
    (46) statement -> . UNCALL ID LPAREN arg_list RPAREN
    (48) statement -> . FROM condition LOOP body UNTIL condition
    (49) statement -> . IF condition THEN body FI condition
    (50) statement -> . IF condition THEN body ELSE body FI condition
    (53) statement -> . PAR par_branch_list RAP
    (11) empty -> .
    (12) type -> . INT
    (13) type -> . STACK
    (14) type -> . CHANNEL

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LOCAL resolved as shift
  ! shift/reduce conflict for DELOCAL resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for UNCALL resolved as shift
  ! shift/reduce conflict for FROM resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for PAR resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STACK resolved as shift
  ! shift/reduce conflict for CHANNEL resolved as shift
    ID              shift and go to state 14
    LOCAL           shift and go to state 19
    DELOCAL         shift and go to state 20
    CALL            shift and go to state 21
    UNCALL          shift and go to state 22
    FROM            shift and go to state 23
    IF              shift and go to state 24
    PAR             shift and go to state 25
    RAP             reduce using rule 11 (empty -> .)
    AND             reduce using rule 11 (empty -> .)
    INT             shift and go to state 11
    STACK           shift and go to state 12
    CHANNEL         shift and go to state 13

  ! ID              [ reduce using rule 11 (empty -> .) ]
  ! LOCAL           [ reduce using rule 11 (empty -> .) ]
  ! DELOCAL         [ reduce using rule 11 (empty -> .) ]
  ! CALL            [ reduce using rule 11 (empty -> .) ]
  ! UNCALL          [ reduce using rule 11 (empty -> .) ]
  ! FROM            [ reduce using rule 11 (empty -> .) ]
  ! IF              [ reduce using rule 11 (empty -> .) ]
  ! PAR             [ reduce using rule 11 (empty -> .) ]
  ! INT             [ reduce using rule 11 (empty -> .) ]
  ! STACK           [ reduce using rule 11 (empty -> .) ]
  ! CHANNEL         [ reduce using rule 11 (empty -> .) ]

    par_branch_list                shift and go to state 49
    body                           shift and go to state 50
    statement                      shift and go to state 16
    empty                          shift and go to state 17
    type                           shift and go to state 18

state 26

    (7) procedure -> PROCEDURE ID LPAREN param_list RPAREN . body
    (8) body -> . statement
    (9) body -> . body statement
    (10) body -> . empty
    (24) statement -> . type ID
    (25) statement -> . ID PLUSEQUALS expr
    (26) statement -> . ID MINUSEQUALS expr
    (27) statement -> . ID PRODEQUALS expr
    (28) statement -> . ID DIVEQUALS expr
    (29) statement -> . ID EXPEQUALS expr
    (30) statement -> . ID MODEQUALS expr
    (31) statement -> . ID SWAP expr
    (36) statement -> . LOCAL type ID EQUALS value
    (37) statement -> . DELOCAL type ID EQUALS value
    (38) statement -> . DELOCAL type ID
    (41) statement -> . CALL ID LPAREN RPAREN
    (42) statement -> . CALL ID LPAREN arg_list RPAREN
    (43) statement -> . ID LPAREN RPAREN
    (44) statement -> . ID LPAREN arg_list RPAREN
    (45) statement -> . UNCALL ID LPAREN RPAREN
    (46) statement -> . UNCALL ID LPAREN arg_list RPAREN
    (48) statement -> . FROM condition LOOP body UNTIL condition
    (49) statement -> . IF condition THEN body FI condition
    (50) statement -> . IF condition THEN body ELSE body FI condition
    (53) statement -> . PAR par_branch_list RAP
    (11) empty -> .
    (12) type -> . INT
    (13) type -> . STACK
    (14) type -> . CHANNEL

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LOCAL resolved as shift
  ! shift/reduce conflict for DELOCAL resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for UNCALL resolved as shift
  ! shift/reduce conflict for FROM resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for PAR resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STACK resolved as shift
  ! shift/reduce conflict for CHANNEL resolved as shift
    ID              shift and go to state 14
    LOCAL           shift and go to state 19
    DELOCAL         shift and go to state 20
    CALL            shift and go to state 21
    UNCALL          shift and go to state 22
    FROM            shift and go to state 23
    IF              shift and go to state 24
    PAR             shift and go to state 25
    PROCEDURE       reduce using rule 11 (empty -> .)
    $end            reduce using rule 11 (empty -> .)
    INT             shift and go to state 11
    STACK           shift and go to state 12
    CHANNEL         shift and go to state 13

  ! ID              [ reduce using rule 11 (empty -> .) ]
  ! LOCAL           [ reduce using rule 11 (empty -> .) ]
  ! DELOCAL         [ reduce using rule 11 (empty -> .) ]
  ! CALL            [ reduce using rule 11 (empty -> .) ]
  ! UNCALL          [ reduce using rule 11 (empty -> .) ]
  ! FROM            [ reduce using rule 11 (empty -> .) ]
  ! IF              [ reduce using rule 11 (empty -> .) ]
  ! PAR             [ reduce using rule 11 (empty -> .) ]
  ! INT             [ reduce using rule 11 (empty -> .) ]
  ! STACK           [ reduce using rule 11 (empty -> .) ]
  ! CHANNEL         [ reduce using rule 11 (empty -> .) ]

    body                           shift and go to state 51
    statement                      shift and go to state 16
    empty                          shift and go to state 17
    type                           shift and go to state 18

state 27

    (5) param_list -> param_list COMMA . type ID
    (12) type -> . INT
    (13) type -> . STACK
    (14) type -> . CHANNEL

    INT             shift and go to state 11
    STACK           shift and go to state 12
    CHANNEL         shift and go to state 13

    type                           shift and go to state 52

state 28

    (4) param_list -> type ID .

    RPAREN          reduce using rule 4 (param_list -> type ID .)
    COMMA           reduce using rule 4 (param_list -> type ID .)


state 29

    (25) statement -> ID PLUSEQUALS . expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr PROD expr
    (18) expr -> . expr DIV expr
    (19) expr -> . expr EXP expr
    (20) expr -> . expr MOD expr
    (21) expr -> . LPAREN expr RPAREN
    (22) expr -> . NUMBER
    (23) expr -> . ID

    LPAREN          shift and go to state 45
    NUMBER          shift and go to state 46
    ID              shift and go to state 47

    expr                           shift and go to state 53

state 30

    (26) statement -> ID MINUSEQUALS . expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr PROD expr
    (18) expr -> . expr DIV expr
    (19) expr -> . expr EXP expr
    (20) expr -> . expr MOD expr
    (21) expr -> . LPAREN expr RPAREN
    (22) expr -> . NUMBER
    (23) expr -> . ID

    LPAREN          shift and go to state 45
    NUMBER          shift and go to state 46
    ID              shift and go to state 47

    expr                           shift and go to state 54

state 31

    (27) statement -> ID PRODEQUALS . expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr PROD expr
    (18) expr -> . expr DIV expr
    (19) expr -> . expr EXP expr
    (20) expr -> . expr MOD expr
    (21) expr -> . LPAREN expr RPAREN
    (22) expr -> . NUMBER
    (23) expr -> . ID

    LPAREN          shift and go to state 45
    NUMBER          shift and go to state 46
    ID              shift and go to state 47

    expr                           shift and go to state 55

state 32

    (28) statement -> ID DIVEQUALS . expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr PROD expr
    (18) expr -> . expr DIV expr
    (19) expr -> . expr EXP expr
    (20) expr -> . expr MOD expr
    (21) expr -> . LPAREN expr RPAREN
    (22) expr -> . NUMBER
    (23) expr -> . ID

    LPAREN          shift and go to state 45
    NUMBER          shift and go to state 46
    ID              shift and go to state 47

    expr                           shift and go to state 56

state 33

    (29) statement -> ID EXPEQUALS . expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr PROD expr
    (18) expr -> . expr DIV expr
    (19) expr -> . expr EXP expr
    (20) expr -> . expr MOD expr
    (21) expr -> . LPAREN expr RPAREN
    (22) expr -> . NUMBER
    (23) expr -> . ID

    LPAREN          shift and go to state 45
    NUMBER          shift and go to state 46
    ID              shift and go to state 47

    expr                           shift and go to state 57

state 34

    (30) statement -> ID MODEQUALS . expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr PROD expr
    (18) expr -> . expr DIV expr
    (19) expr -> . expr EXP expr
    (20) expr -> . expr MOD expr
    (21) expr -> . LPAREN expr RPAREN
    (22) expr -> . NUMBER
    (23) expr -> . ID

    LPAREN          shift and go to state 45
    NUMBER          shift and go to state 46
    ID              shift and go to state 47
